# aact-teleop

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  ar_teleop_hao.py  move_to.py  plot.ipynb  pyproject.toml
.github/.workflows/: mypy.yml
.github/workflows/: mypy.yml
body/: setup.py
body/stretch_body/: end_of_arm_tools.py  robot_collision.py
dataflows/: quest_local_redis.toml  stretch_zmq_streaming.toml
dataflows/examples/: benchmark_performance.toml  dataflow_controller.toml  dataflow_stretch.toml  quest_local_redis.toml  speaker_listener.toml  stretch_zmq_streaming.toml
open_gopro/: .gitignore  README.md  TODO.md  noxfile.py  pyproject.toml
open_gopro/docs/: conf.py  contributing.rst  usage.rst
open_gopro/open_gopro/: __init__.py  communicator_interface.py  constants.py  enum.py  gopro_base.py  gopro_wired.py  gopro_wireless.py  logger.py  parser_interface.py  types.py  util.py
open_gopro/tests/: conftest.py
pubsub_server/: __init__.py
pubsub_server/cli/: __init__.py
pubsub_server/launchers/: base.py
pubsub_server/messages/: __init__.py  base.py  commons.py  registry.py  serialization_utils.py
pubsub_server/nodes/: __init__.py  base.py  listener.py  llm.py  performance.py  print.py  random.py  record.py  registry.py  speaker.py  tick.py  transcriber.py  tts.py
stubs/open_gopro/: __init__.pyi  constants.pyi
stubs/stretch_body/: hello_utils.pyi  robot.pyi
teleop/: __init__.py  client.py  data_classes.py  dataflow.toml  dataflow_controller.toml  dataflow_stretch.toml  gopro.py  gopro_node.py  llm.py  realsense_node.py  realsense_webcam_node.py  realsense_wristcam_node.py  replay.py  server.py  stretch_control_loop.py  stretch_home.py  stretch_node.py  stretch_record_node.py  test_vllm.py  utils.py  video_streaming_client.py  video_streaming_node.py  vr_controller_node.py  webcam_node.py
teleop/dataflows/: speaker_listener.toml
teleop/templates/: index.html.j2
tests/aact/: test_launch.py  test_messages.py  test_nodes.py
tests/pubsub_server/: test.toml  test_launch.py  test_messages.py  test_nodes.py
unity/: .gitignore  README-ja.md  README.md
unity/.plastic/: plastic.wktree
unity/Assets/: Client.cs  Sender.cs  displayCoordinates.cs  drawCoordinateSystem.cs  getControllerState.cs  packages.config  (+2 more)
(+127 files in other folders)
