[tool.poetry]
name = "teleop"
version = "0.0.1"
description = "Teleoperating stretch robot"
authors = ["Hao Zhu <prokilchu@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.9"
pydantic = "^2.7.2"
fastapi = "^0.111.0"
zmq = "^0.0.0"
numpy = "^1.26.4"
hello-robot-stretch-body = {path = "./body", develop = true, platform="linux"}

open-gopro = {path = "./open_gopro", develop = true}
[tool.poetry.group.test.dependencies]
mypy = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "stubs"
strict = true
plugins = [
    "pydantic.mypy"
]
exclude = "(body|open_gopro)/*"

[tool.poetry.scripts]
server = 'teleop.server:main'
client = 'teleop.client:main'
