[tool.poetry]
name = "teleop"
version = "0.0.1"
description = "Teleoperating stretch robot"
authors = ["Hao Zhu <prokilchu@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [
    { include = "teleop" },
    { include = "pubsub_server" }
]

[tool.poetry.dependencies]
python = "~3.11.9"
pydantic = "^2.7.2"
fastapi = "^0.111.0"
zmq = "^0.0.0"
numpy = "^1.26.4"
hello-robot-stretch-body = {path = "./body", develop = true, platform="linux"}
redis = "^5.0.7"
open-gopro = {path = "./open_gopro", develop = true}
types-requests = "^2.32.0.20240622"
requests = "^2.32.3"
opencv-contrib-python = "^4.10.0.84"
toml = "^0.10.2"
types-toml = "^0.10.8.20240310"
pytest-mock = "^3.14.0"
fakeredis = "^2.23.3"
pytest-asyncio = "^0.23.7"
networkx = "^3.3"
packaging = "^24.1"
pytest = "^8.2.2"
dash = "^2.17.1"
aiofiles = "^24.1.0"
types-aiofiles = "^24.1.0.20240626"
aiostream = "^0.6.1"
pyaudio = "^0.2.14"
types-pyaudio = "^0.2.16.20240516"
[tool.poetry.group.test.dependencies]
mypy = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "stubs"
strict = true
plugins = [
    "pydantic.mypy"
]
exclude = "(body|open_gopro)/*"

[tool.poetry.scripts]
server = 'teleop.server:main'
client = 'teleop.client:main'
pubsub = 'pubsub_server.cli:app'

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
